--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -6,6 +6,7 @@ dnspython==2.6.1
 email_validator==2.1.1
 exceptiongroup==1.2.0
 fastapi==0.110.1
+gunicorn==21.2.0
 h11==0.14.0
 httpcore==1.0.5
 httptools==0.6.1
@@ -15,6 +16,7 @@ itsdangerous==2.1.2
 Jinja2==3.1.3
 MarkupSafe==2.1.5
 orjson==3.10.0
+packaging==24.0
 pydantic==2.6.4
 pydantic-extra-types==2.6.0
 pydantic-settings==2.2.1
