--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -36,4 +36,4 @@ jobs:
             cd app
             source env/bin/activate
             pip install -r requirements.txt
-            uvicorn main:app --reload
+            uvicorn main:app --host 0.0.0.0 --port 8000
