--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -34,6 +34,7 @@ jobs:
             git stash
             git pull
             cd app
-            source env/bin/activate
-            pip install -r requirements.txt
-            uvicorn main:app --host 0.0.0.0 --port 8000
+            docker stop portfolio
+            docker rm portfolio
+            docker build -t portfolio_image .
+            docker run -d --name portfolio -p 8000:8000 portfolio_image
